# steve-2

./: .gitignore  load_env.ps1
backend/: launch_mcp.sh  pyproject.toml  stop_mcp.sh
backend/llamaindex/: a2a_api.py  calculator_mcp.py  email_mcp.py  sanctions_mcp.py  strands_multi.py  strands_tavily.py  strands_test.py
backend/mastra/: package-lock.json  package.json
backend/mastra/src/mastra/: index.ts
backend/mastra/src/mastra/agents/: stock-agent.ts
frontend/: next.config.ts  package-lock.json  package.json  tsconfig.json
frontend/app/: page.tsx
frontend/app/test/: Chart.tsx  action.ts  client_action.ts  form.tsx  hallucination_action.ts  page.tsx
